day4/ec2.tf
#create instance
resource "aws_instance" "name" {
  ami                         = var.ami
  instance_type               = var.instance_type
  key_name                    = var.key_name
  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = [aws_security_group.allowint.id]
  associate_public_ip_address = true
  tags = {
    Name = "myec2"
  }
}
